# aoc

01/: Part1.hs  Part2.hs
02/: Part1.hs  Part2.hs
03/: Part1.hs  Part2.hs
04/: Part1.hs  Part2.hs
05/: Part1.hs  Part2.hs
06/: Part1.hs  Part2.hs
07/: Part1.hs  Part2.hs
08/: Part1.hs  Part2.hs
09/: Part1.hs  Part2.hs
10/: Part1.hs
11/: Part1.hs  Part2.hs
12/: Part1.hs
13/: Part1.hs  Part2.hs
14/: Part1.hs
15/: Part1.hs  Part2.hs
16/: Part1.hs
2015/: LICENSE  aoc2015.cabal
2015/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day4.py  Day5.hs
2025/: .gitignore  x2025.cabal
2025/app/: Main.hs
2025/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  MyLib.hs
