cabal-version:      3.0
name:               aoc2015
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             dawkrish
maintainer:         krishnansh710@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
                    MyLib,
                    Day1,
                    Day2,
                    Day3
                    
    -- other-modules:
    -- other-extensions:
    build-depends:    split ^>=0.2.5,
                      base >= 4,
                      text,
                      containers
                      
    hs-source-dirs:   src
    default-language: GHC2021

executable aoc2015
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >= 4,
        text,
        aoc2015

    hs-source-dirs:   app
    default-language: GHC2021

test-suite aoc2015-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >= 4,
        aoc2015
